@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
 if [[ -r ./.tigrc ]]; then
-  ln -s $(readlink -f ./.gitconfig) $HOME/.tigrc
+  ln -s $(readlink -f ./.tigrc) $HOME/.tigrc
 fi
 
